WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37687
Chromium: WebKit::WebURLResponse::addHTTPHeaderField will crash if response is invalid UTF-8
https://bugs.webkit.org/show_bug.cgi?id=37687
Summary
Chromium: WebKit::WebURLResponse::addHTTPHeaderField will crash if response i...
Fumitoshi Ukai
Reported
2010-04-15 17:52:32 PDT
If HTTP response contains invalid UTF-8, WebKit::WebURLResponse::addHTTPHeaderField will crash. See more detail in
http://code.google.com/p/chromium/issues/detail?id=41148
Attachments
Patch
(1.27 KB, patch)
2010-04-15 17:54 PDT
,
Fumitoshi Ukai
jianli
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2010-04-15 17:54:57 PDT
Created
attachment 53495
[details]
Patch
Jian Li
Comment 2
2010-04-16 11:09:20 PDT
Comment on
attachment 53495
[details]
Patch r=me Please update the bug title and ChangeLog to replace "Chromium:" with "[Chromium]" before landing. Thanks.
Jian Li
Comment 3
2010-04-16 11:14:46 PDT
There is also a typo in your ChangeLog. Please replace "ignore is" with "ignore if".
Fumitoshi Ukai
Comment 4
2010-04-16 11:19:45 PDT
Committed
r57728
: <
http://trac.webkit.org/changeset/57728
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug