2010-04-16  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Jian Li.

        [chromium] WebKit::WebURLResponse::addHTTPHeaderField will crash if response is invalid UTF-8
        https://bugs.webkit.org/show_bug.cgi?id=37687

        * src/WebURLResponse.cpp:
        (WebKit::WebURLResponse::addHTTPHeaderField): ignore if name or value is null string.

Canonical link: https://commits.webkit.org/49012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57728 268f45cc-cd09-0410-ab3c-d52691b4dbfc